# avogadro

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  INSTALL  README.md  kwaak.toml  package-lock.json
.github/: apt-packages.txt
.github/chatmodes/: beastmode3.1.chatmode.md
.github/workflows/: build.yml  ci.yml  module-build.yml  windows-install.yml  windows-installer-test.yml  windows-installer.yml  windows-xtb-installer.yml
.plandex-v2/: projects-v2.json
avogadro/: avogadro.exe.manifest
avogadro/src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  clipboardformatdetector.cpp  clipboardformatdetector.h  config.h.in  detachedview.cpp  detachedview.h  engineitemdelegate.h  engineitemmodel.cpp  engineviewwidget.cpp  engineviewwidget.h  glgraphicsview.cpp  main.cpp  mainwindow.cpp  mainwindow.h  primitiveitemmodel.cpp  projecttreeeditor.cpp  savedialog.cpp  settingsdialog.cpp  settingsdialog.ui  updatecheck.cpp  updatedialog.cpp  updatedialog.h
avogadro/src/projectdelegates/: atomdelegate.cpp
avogadro/src/tests/: CMakeLists.txt  clipboardformatdetectortest.cpp
avogadro/src/windows/: avogadro.exe.manifest  avogadro.rc
ci/: copy_intel_redist.ps1
cmake/: Qt5Compat.cmake
cmake/modules/: AvoCPack.cmake  AvoCPackOptions.cmake.in  AvogadroConfig.cmake.in  AvogadroUse.cmake  FindLinguist.cmake  FindOpenBabel2.cmake  FindOpenBabel3.cmake  FindXTB.cmake
doc/: index.docbook
i18n/avogadro/: avogadro.pot
i18n/libavogadro/: libavogadro.pot
libavogadro/: CMakeLists.txt
libavogadro/examples/c++/: CMakeLists.txt
libavogadro/examples/python/: extensiontemplate.py  proteinextension.py  standalone.py  tooltemplate.py
libavogadro/examples/thirdPartyExtensions/01-HelloWorld/: CMakeLists.txt
libavogadro/examples/thirdPartyExtensions/02-DynamicDisplay/: CMakeLists.txt
libavogadro/examples/thirdPartyExtensions/03-ViewPlane/: CMakeLists.txt  viewplaneextension.cpp
libavogadro/examples/thirdPartyExtensions/04-RotateSelection/: CMakeLists.txt  rotateselectionextension.cpp
libavogadro/examples/thirdPartyExtensions/05-ConformerPlot/: CMakeLists.txt
libavogadro/src/: CMakeLists.txt  animation.cpp  atom.cpp  bond.cpp  camera.cpp  color.cpp  config.h.in  cylinder_p.cpp  dockwidget.h  elementdetail_p.cpp  elementdetail_p.h  elementitem_p.cpp  engine.h  glhit.h  global.h  glpainter_p.cpp  glpainter_p.h  glwidget.cpp  glwidget.h  molecule.cpp  molecule.h  moleculefile.cpp  moleculefile.h  orca_data_stub.h  periodictablescene_p.cpp  periodictableview.cpp  plotwidget.cpp  plotwidget.h  pythonengine_p.h  pythonerror.cpp  pythonextension_p.h  pythoninterpreter.cpp  pythonscript.cpp  pythontool_p.h  readfilethread_p.cpp  sphere_p.cpp  textmatrixeditor.h  textrenderer_p.cpp
libavogadro/src/colors/: CMakeLists.txt  atomindexcolor.cpp  atomindexcolor.h  chargecolor.cpp  chargecolor.h  customcolor.cpp  customcolor.h  distancecolor.cpp  distancecolor.h  elementcolor.cpp  elementcolor.h  residuecolor.cpp  residuecolor.h  smartscolor.cpp  smartscolor.h
libavogadro/src/engines/: CMakeLists.txt  axesengine.cpp  axesengine.h  bsdyengine.cpp  bsdyengine.h  cartoonengine.cpp  cartoonengine.h  cartoonmeshgenerator.cpp  dipoleengine.cpp  dipoleengine.h  forceengine.cpp  forceengine.h  hairengine.cpp  hairengine.h  hairsettingswidget.ui  hbondengine.cpp  hbondengine.h  labelengine.cpp  labelengine.h  polygonengine.cpp  polygonengine.h  qtaimengine.cpp  qtaimengine.h  ribbonengine.cpp  ribbonengine.h  ringengine.cpp  ringengine.h  simplewireengine.cpp  simplewireengine.h  sphereengine.cpp  sphereengine.h  stickengine.cpp  stickengine.h  surfaceengine.cpp  surfaceengine.h  wireengine.cpp  wireengine.h
libavogadro/src/engines/python/: wireframe.py
libavogadro/src/extensions/: CMakeLists.txt  animationdialog.h  animationdialog.ui  animationextension.cpp  animationextension.h  cartesianextension.cpp  cartesianextension.h  conformersearchdialog.h  constraintsdialog.cpp  constraintsdialog.h  fileimportextension.cpp  fileimportextension.h  fitviewextension.cpp  fitviewextension.h  forcefielddialog.cpp  forcefielddialog.h  forcefielddialog.ui  forcefieldextension.cpp  forcefieldextension.h  gl2psextension.cpp  gl2psextension.h  h2methylextension.cpp  h2methylextension.h  hydrogensextension.cpp  hydrogensextension.h  insertcommand.cpp  insertdnaextension.cpp  insertdnaextension.h  insertfragmentdialog.cpp  insertfragmentdialog.h  insertfragmentdialog.ui  insertfragmentextension.cpp  insertfragmentextension.h  insertpeptideextension.cpp  insertpeptideextension.h  invertchiralextension.cpp  invertchiralextension.h  molecularpropextension.cpp  molecularpropextension.h  networkfetchextension.cpp  (+23 more)
libavogadro/src/extensions/crystallography/: avospglib.cpp  ceundo.h  crystallographyextension.cpp  crystallographyextension.h  crystalpastedialog.cpp  crystalpastedialog.h
libavogadro/src/extensions/spectra/: cd.cpp  (+47 more)
libavogadro/src/python/: CMakeLists.txt  color.cpp  glwidget.cpp  main.cpp  sip.cpp
libavogadro/src/tools/: CMakeLists.txt  aligntool.cpp  aligntool.h  autoopttool.cpp  autoopttool.h  autorotatetool.cpp  autorotatetool.h  bondcentrictool.cpp  bondcentrictool.h  clickmeasuretool.cpp  clickmeasuretool.h  drawtool.cpp  drawtool.h  eyecandy.cpp  manipulatetool.cpp  manipulatetool.h  navigatetool.cpp  navigatetool.h  selectrotatetool.cpp  selectrotatetool.h  xtbopttool.cpp  xtbopttool.h  xtbopttool.qrc  zmatrixdialog.cpp  zmatrixdialog.h  zmatrixmodel.cpp  zmatrixtool.cpp  zmatrixtool.h
libavogadro/tests/: CMakeLists.txt  addremovehydrogenstest.cpp  cdxformattest.cpp  drawcommandtest.cpp  forcefieldtest.cpp  hairenginetest.cpp  hydrogenscommandtest.cpp  inchipastetest.cpp  insertfragmentextensiontest.cpp  insertfragmenttest.cpp  irbroadeningtest.cpp  moleculebench.cpp  moleculefiletest.cpp  moleculetest.cpp  nearirspectratest.cpp  neighborlisttest.cpp  primitivemodeltest.cpp  xtbopttooltest.cpp  xtbphysicstest.cpp
scripts/: build.ps1  install-avo-deps.ps1
scripts/installer/: create_installer.py  probe_openbabel_runtime.py  setup.nsi
scripts/installer/installer_languages/: german.nsh
(+96 files in other folders)
